--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "target": "es5",
     "esModuleInterop": true,
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
+    "resolveJsonModule": true
   }
 }
