--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
