--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ts-react-redux-kit",
+  "name": "kd",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "git@github.com:mbadeen/ts-react-redux-kit.git",
+  "repository": "git@github.com:mbadeen/kd.git",
   "author": "MB",
   "license": "MIT",
   "devDependencies": {
