--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
-    "outDir": "./dist/",
-    "noImplicitAny": true,
-    "module": "commonjs",
-    "target": "es5",
+    "allowJs": true,
     "esModuleInterop": true,
     "jsx": "react",
-    "allowJs": true,
-    "resolveJsonModule": true
+    "module": "commonjs",
+    "outDir": "./dist/",
+    "resolveJsonModule": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "es5"
   }
 }
